<resources>
    <string name="app_name">HW1_DiceGame</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="player_d1">-</string>
    <string name="player_d2">-</string>
    <string name="cpu_d1">-</string>
    <string name="cpu_d2">-</string>
    <string name="back">Back</string>
    <string-array name= "dice_values">
        <item>-</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="title">American Roulette</string>
    <string name="instructions">How to win
        \t\u2022 The game consists of 2 players. You and a CPU opponent\n
        \t\u2022 To win, have the highest score between players.\n
        \t\u2022 How the score is calculated:\n
        \t\t\u2022 Take the total of 2 rolled dice\n
        \t\t\u2022 Divide that value by 6\n
        \t\t\u2022 The remainder will be the player's score</string>
</resources>
