<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:background="@android:color/darker_gray"
            android:gravity="center">

            <TextView
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/home_title_size"></TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/playButton"
                android:layout_margin="@dimen/home_margin"
                android:paddingHorizontal="@dimen/home_button_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:text="@string/play" />

            <Button
                android:id="@+id/helpButton"
                android:layout_margin="@dimen/home_margin"
                android:paddingHorizontal="@dimen/home_button_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:text="@string/help" />

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/home_margin"
                android:paddingHorizontal="@dimen/home_about_button_padding"
                android:background="@android:color/background_light"
                android:text="@string/about" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>