<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".GameplayActivity">

    <RelativeLayout
        android:id="@+id/win_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/layout_win_margin_bottom"
        android:layout_marginHorizontal="@dimen/layout_win_margin"
        android:layout_weight=".1">

        <TextView
            android:id="@+id/winner_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/winner_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/computer_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/layout_content_margin"
        android:layout_weight=".3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CPU_D1"
            android:layout_width="@dimen/layout_button_size"
            android:layout_height="@dimen/layout_button_size"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="@dimen/layout_button_margin"
            android:layout_weight=".5"
            android:background="@android:color/background_light"
            android:enabled="true"
            android:text="@string/cpu_d1" />

        <Button
            android:id="@+id/CPU_D2"
            android:layout_width="@dimen/layout_button_size"
            android:layout_height="@dimen/layout_button_size"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="@dimen/layout_button_margin"
            android:layout_weight=".5"
            android:background="@android:color/background_light"
            android:enabled="true"
            android:text="@string/cpu_d2" />

        <TextView
            android:id="@+id/CPU_Score_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/CPU_D1"
            android:layout_marginTop="@dimen/score_margin_top"
            android:layout_toLeftOf="@id/CPU_Score_value"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/dice_text_size" />

        <TextView
            android:id="@+id/CPU_Score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/CPU_D1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/score_margin_left"
            android:layout_marginTop="@dimen/score_margin_top"
            android:text="--"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/dice_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/player_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/layout_content_margin"
        android:layout_weight=".3"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/PLYR_D1"
            android:layout_width="@dimen/layout_button_size"
            android:layout_height="@dimen/layout_button_size"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="@dimen/layout_button_margin"
            android:layout_weight=".5"
            android:background="@android:color/background_light"
            android:textAlignment="center" />

        <Button
            android:id="@+id/PLYR_D2"
            android:layout_width="@dimen/layout_button_size"
            android:layout_height="@dimen/layout_button_size"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="@dimen/layout_button_margin"
            android:layout_weight=".5"
            android:background="@android:color/background_light"
            android:enabled="true"
            android:text="@string/player_d2" />

        <TextView
            android:id="@+id/player_score_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/PLYR_D1"
            android:layout_marginTop="@dimen/score_margin_top"
            android:layout_toLeftOf="@id/Player_Score_value"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/dice_text_size" />

        <TextView
            android:id="@+id/Player_Score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/PLYR_D1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/score_margin_left"
            android:layout_marginTop="@dimen/score_margin_top"
            android:text="@string/score_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="@dimen/dice_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/play_again_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/layout_content_margin"
        android:layout_marginTop="@dimen/play_again_margin_top"
        android:layout_weight=".1">

        <Button
            android:id="@+id/play_again_button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:text="Play Again?" />

    </RelativeLayout>

</LinearLayout>